--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/pragma_reto
+spring.datasource.url=jdbc:mysql://localhost/pragma_challenge
 spring.datasource.username=root
 spring.datasource.password=948900930
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
