--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.data.mongodb.uri:mongodb+srv://joseg:948900930@cluster0.ncakizs.mongodb.net/pragma_challenge?retryWrites=true&w=majority
 spring.datasource.url=jdbc:mysql://localhost/pragma_challenge
 spring.datasource.username=root
 spring.datasource.password=948900930
